--- a/Backend/Database/devInfo.env
+++ b/Backend/Database/devInfo.env
@@ -1,4 +1,5 @@
-DB_HOST=localhost
-DB_USER=ftn123
+DB_HOST=mysql_db
+DB_USER=user_test
 DB_PASSWORD=ftn123
-DB_NAME=reddit
+DB_NAME=reddit_docker
+DB_PORT=3306
