React more stuff, Redux initialization store,navbar,pages

--- a/Frontend/Dockerfile
+++ b/Frontend/Dockerfile
@@ -19,8 +19,10 @@ WORKDIR /app
 COPY ./my-app/package*.json ./
 
 
-#install dependencies
-RUN npm install
+#install dependencies, Redux, react-dom
+RUN npm install --legacy-peer-deps
+
+
 
 #Kopiramo ostali code u image dockera
 COPY ./my-app/ ./
