AuthentificationAPI fixes added cookies,reddis piping,HTTPS ,began nginx setup and mkcert, axiosSetup

--- a/.gitignore
+++ b/.gitignore
@@ -162,3 +162,17 @@ dump.sql
 Dbconfig.json
 .env
 configJWT.py
+
+# Ignore SSL certificates and private keys
+nginx/certs/*.pem
+nginx/certs/*.key
+nginx/certs/*.crt
+nginx/certs/*.p12
+nginx/certs/*.der
+nginx/certs/*.csr
+
+# Ignore any mkcert output (just in case)
+nginx/certs/*mkcert*
+
+#Da moze readme.md instrukcija za ssl certifikat da se komitije
+!nginx/certs/README.md
