--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,8 +26,8 @@ services:
     volumes:
       - .:/usr/src/app   #Map local 'app' folder to container for live code updates, mapira ./app directory sa lokalne masine na /usr/src/app unutar kontjnera, dozvoljava LIVE CODE changes bez rebuilodvanja kontejnera
     working_dir: /usr/src/app      # Ensure Flask runs from this directory
-    entrypoint: ["/bin/bash", "./wait-for-mysql.sh"]   # Use wait script before running Flask, za ovo mi je trebalo 3 dana, onaj depends on nista ne garantuje da ce flask sacekati...
-
+    entrypoint: ["/bin/bash", "./wait-for-mysql.sh"]   # Use wait script before running Flask, za ovo mi je trebalo 3 dana, depends garantuje order po kom se pokrece a ne garantuje je da je mysql skroz spreman za primanje konekc...
+    #ovaj entryPoint ne mora da se napise jer je vec napisan u DockerFile-u, ali cisto da se zna sta se desava sam ostavio kad se gleda docker-compose
     networks:              #dozvoljava komunikaciju izmedju kontejnera
       - frontend-network
       - backend-network
@@ -87,6 +87,7 @@ services:
     networks:
       - frontend-network
     volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro # mount-ujemo  config za development
       - ./nginx/certs:/etc/nginx/certs:ro   #ovako je najbolje zbog sigurnosti, napisao sam u nginx docker file zato da ne koristim COPY tih cert, ro ->read only
 
 
