--- a/nginx/DockerFile
+++ b/nginx/DockerFile
@@ -9,7 +9,7 @@ FROM nginx:alpine
 # i samo treba da se se kaze Nginx-u da treba da reload-uje svoj config 'docker compose exec nginx nginx -s reload' ili lakse 
 # samo restartujemo nginx service docker compose restart nginx da bi se apply-ovali changovi. 
 
-# image treba da bude genericna da je STVARNO generican default.conf koji se skoroni nikad ne menja za skoro svaki enviorment
+# image treba da bude genericna da je STVARNO generican default.conf koji se skoro nikad ne menja za skoro svaki enviorment
 # onda bih ga kopirao kao dole ali za project-specific config mountovanje je bolje
 # COPY nginx.conf /etc/nginx/nginx.conf
 
