--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -52,7 +52,7 @@ http {
             proxy_pass http://flask_backend/;                       # Promeniti u Gunicorn-u u productinu
             proxy_set_header Host $host;                            # Host cuva originalni host header, tj ogirinalni client info
             proxy_set_header X-Real-IP $remote_addr;                 
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;  # lista svih ip adresa kroz koje je zahtev prosao
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;  # Uzmi postojeci X-forwarded-For header (ako postoji od load-balancer npr) ako ne napravi svoj i dodaj $remote_addr tj adresu od onoga ko ti salje zahtev
             proxy_set_header X-Forwarded-Proto $scheme;
             # Za robust proxying
             proxy_connect_timeout 75s;
