--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -23,7 +23,7 @@ services:
     working_dir: /usr/src/app
     entrypoint: ["/bin/bash", "./wait-for-mysql.sh"]
     networks:
-      - frontend-network
+      #- frontend-network
       - backend-network
 
   redis:
@@ -75,6 +75,7 @@ services:
       - react_frontend
     networks:
       - frontend-network
+      - backend-network
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro 
       - ./nginx/certs:/etc/nginx/certs:ro 
