--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -62,7 +62,6 @@ http {
 
         # Serveujemo React Frontend (Development Mode), Zakomentarisati dole location / kasnije zbog production-a
         # Svi requests NOT matching /api/ ce se proxi-ovati ka React development server
-        # Omogucava live reloading provided od strane React dev server
         location / {
             proxy_pass http://react_dev_server; # Forwarduje ka react_dev_server-u gore u upstream react_dev_server sam definisao da je on react_frontend:3000 == react_dev_server 
             proxy_set_header Host $host;
@@ -73,6 +72,30 @@ http {
             proxy_send_timeout 75s;
             proxy_read_timeout 75s;
         }
+
+        # --- WEBSOCKET PROXY (ZA REACT DEV SERVER) ---
+        # Ova veza je kljucna za Hot Module Replacement (HMR) i Live Reloading 
+        # To znaci da kada menjaš kod u Reactu, razvojni server koristi ovaj WebSocket da pošalje te promene u moj web browser bez potpunog osvezavanja stranice sto ubrzava razvoj.
+        # Ovaj blok hendluje WebSocket upgrade za putanju /ws
+        location /ws {
+            # Standardna WebSocket zaglavlja za upgrade
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Prosledi WebSocket saobracaj na React development server
+            proxy_pass http://react_dev_server;
+            
+            # Treba mu dugacki timeoute za WebSocket saobracaj
+            proxy_read_timeout 3600s; 
+            proxy_send_timeout 3600s; 
+        }
+
+
+
 
         # --- Production Static File Serving za React (Odkomentarisi i podesi za produkciju posle) ---
         # Ovo dole zamenjuje gornji  'location /' block  kada budem podesio za production
