--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -61,16 +61,21 @@ http {
         }
 
         # Serveujemo React Frontend (Development Mode), Zakomentarisati dole location / kasnije zbog production-a
-        # Svi requests NOT matching /api/ ce se proxi-ovati ka React development server
+        # Svi ostali zahtevi (koji nisu /api/ ili /ws) idu ovde
         location / {
-            proxy_pass http://react_dev_server; # Forwarduje ka react_dev_server-u gore u upstream react_dev_server sam definisao da je on react_frontend:3000 == react_dev_server 
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Proto $scheme;          # Vazno za React da zna da je HTTPS
             proxy_connect_timeout 75s;
             proxy_send_timeout 75s;
             proxy_read_timeout 75s;
+
+            #da bi  Nginx pravilno proxy-ova  HTTP(S) i  WebSocket traffic  i react dev server traffic
+
+            #mora HTTPS ovo je fix za WebSocket connection to 'wss://localhost:3000/ws' i
+            proxy_pass https://react_dev_server; # Forwarduje ka react_dev_server-u gore u upstream react_dev_server sam definisao da je on react_frontend:3000 == react_dev_server 
+
         }
 
         # --- WEBSOCKET PROXY (ZA REACT DEV SERVER) ---
@@ -87,7 +92,8 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             
             # Prosledi WebSocket saobracaj na React development server
-            proxy_pass http://react_dev_server;
+            # treba HTTPS 
+            proxy_pass https://react_dev_server;
             
             # Treba mu dugacki timeoute za WebSocket saobracaj
             proxy_read_timeout 3600s; 
